--- a/qapla-chess-gui.vcxproj
+++ b/qapla-chess-gui.vcxproj
@@ -161,15 +161,46 @@
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
-    <ClCompile Include="src\board.cpp" />
     <ClCompile Include="src\font.cpp" />
     <ClCompile Include="src\gui.cpp" />
     <ClCompile Include="src\qapla-chess-gui.cpp" />
+    <ClCompile Include="src\qapla-engine\bitboardmasks.cpp" />
+    <ClCompile Include="src\qapla-engine\board.cpp" />
+    <ClCompile Include="src\qapla-engine\hashconstants.cpp" />
+    <ClCompile Include="src\qapla-engine\magics.cpp" />
+    <ClCompile Include="src\qapla-engine\movegenerator.cpp" />
+    <ClCompile Include="src\qapla-engine\piecesignature.cpp" />
+    <ClCompile Include="src\qapla-engine\pst.cpp" />
+    <ClCompile Include="src\qapla-tester\game-record.cpp" />
+    <ClCompile Include="src\qapla-tester\game-state.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\board.h" />
     <ClInclude Include="src\font.h" />
     <ClInclude Include="src\gui.h" />
+    <ClInclude Include="src\qapla-engine\bitboardmasks.h" />
+    <ClInclude Include="src\qapla-engine\bits.h" />
+    <ClInclude Include="src\qapla-engine\board.h" />
+    <ClInclude Include="src\qapla-engine\boardstate.h" />
+    <ClInclude Include="src\qapla-engine\evalvalue.h" />
+    <ClInclude Include="src\qapla-engine\fenscanner.h" />
+    <ClInclude Include="src\qapla-engine\hashconstants.h" />
+    <ClInclude Include="src\qapla-engine\magics.h" />
+    <ClInclude Include="src\qapla-engine\materialbalance.h" />
+    <ClInclude Include="src\qapla-engine\move.h" />
+    <ClInclude Include="src\qapla-engine\movegenerator.h" />
+    <ClInclude Include="src\qapla-engine\movelist.h" />
+    <ClInclude Include="src\qapla-engine\movescanner.h" />
+    <ClInclude Include="src\qapla-engine\piecesignature.h" />
+    <ClInclude Include="src\qapla-engine\pst.h" />
+    <ClInclude Include="src\qapla-engine\types.h" />
+    <ClInclude Include="src\qapla-tester\engine-event.h" />
+    <ClInclude Include="src\qapla-tester\game-record.h" />
+    <ClInclude Include="src\qapla-tester\game-result.h" />
+    <ClInclude Include="src\qapla-tester\game-start-position.h" />
+    <ClInclude Include="src\qapla-tester\game-state.h" />
+    <ClInclude Include="src\qapla-tester\logger.h" />
+    <ClInclude Include="src\qapla-tester\move-record.h" />
+    <ClInclude Include="src\qapla-tester\time-control.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
