--- a/imgui.ini
+++ b/imgui.ini
@@ -38,3 +38,91 @@ Size=661,357
 Pos=72,83
 Size=542,471
 
+[Window][Board Workspace]
+Pos=114,32
+Size=1050,713
+
+[Window][Board Workspace/SplitLeft_D265FE70]
+IsChild=1
+Size=534,666
+
+[Window][Board Workspace/##vsplit_1625880009328_top_6AFCC7E9]
+IsChild=1
+Size=941,294
+
+[Window][Board Workspace/##vsplit_2301612793392_top_9732379D]
+IsChild=1
+Size=941,109
+
+[Window][Board Workspace/##vsplit_2408998052336_top_AA0F1A4B]
+IsChild=1
+Size=941,397
+
+[Window][Board Workspace/##vsplit_2408998052336_top_AA0F1A4B/##hsplit_2408998050992_right_8536877E]
+IsChild=1
+Size=537,500
+
+[Window][Board Workspace/##vsplit_2179223658448_top_483D1A32]
+IsChild=1
+Size=941,500
+
+[Window][Board Workspace/##vsplit_2179223658448_top_483D1A32/##hsplit_2179223659600_right_892C784E]
+IsChild=1
+Size=537,500
+
+[Window][Board Workspace/##vsplit_2081866984096_top_F7821912]
+IsChild=1
+Size=795,500
+
+[Window][Board Workspace/##vsplit_2081866984096_top_F7821912/##hsplit_2081866983616_right_90263056]
+IsChild=1
+Size=439,500
+
+[Window][Board Workspace/##vsplit_1978843409248_top_B5644DA7]
+IsChild=1
+Size=863,462
+
+[Window][Board Workspace/##vsplit_1978843409248_top_B5644DA7/##hsplit_1978843406848_right_B877DAB1]
+IsChild=1
+Size=440,500
+
+[Window][Board Workspace/##vsplit_1644757656736_top_D6A9DC47]
+IsChild=1
+Size=695,500
+
+[Window][Board Workspace/##vsplit_1644757656736_top_D6A9DC47/##hsplit_1644757654912_right_1263E1F4]
+IsChild=1
+Size=291,500
+
+[Window][Board Workspace/##vsplit_2759261757072_top_193548DC]
+IsChild=1
+Size=778,500
+
+[Window][Board Workspace/##vsplit_2759261757072_top_193548DC/##hsplit_2759261758320_right_3577CA46]
+IsChild=1
+Size=374,500
+
+[Window][Board Workspace/##vsplit_1425705673392_top_93B667EE]
+IsChild=1
+Size=721,500
+
+[Window][Board Workspace/##vsplit_1425705673392_top_93B667EE/##hsplit_1425705673296_right_37C27EE9]
+IsChild=1
+Size=317,500
+
+[Table][0xEA3D8B1F,5]
+RefScale=13
+Column 0  Width=80
+Column 1  Width=50
+Column 2  Width=46
+Column 3  Width=50
+Column 4  Width=220
+
+[Table][0x89BBC29F,5]
+RefScale=13
+Column 0  Width=80
+Column 1  Width=50
+Column 2  Width=50
+Column 3  Width=50
+Column 4  Width=14
+
